# event_management

./: .gitignore  Dockerfile  README.md  REDME.md  docker-compose.yml  pyproject.toml
auth_app/: serializers.py  urls.py  views.py
event_management/: settings.py  urls.py
events/: admin.py  filters.py  models.py  notifications.py  permissions.py  serializers.py  tests.py  urls.py  views.py
events/migrations/: 0001_initial.py
